Finalisation log4j exemple

--- a/log4j.properties
+++ b/log4j.properties
@@ -1,8 +1,13 @@
 ### direct log messages to stdout ###
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.fichier=org.apache.log4j.FileAppender
+log4j.logger.test=DEBUG, stdout, fichier
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+log4j.appender.fichier.layout=org.apache.log4j.PatternLayout
+log4j.appender.fichier.layout.ConversionPattern=%d %-5p %c - %F:%-4L - %m%n
+log4j.appender.fichier.File=log/test.log
 
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 
