--- a/log4j.properties
+++ b/log4j.properties
@@ -1,7 +1,7 @@
 ### direct log messages to stdout ###
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.fichier=org.apache.log4j.FileAppender
-log4j.logger.test=DEBUG, stdout, fichier
+log4j.logger.gd.example=DEBUG, fichier
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
