--- a/log4j.properties
+++ b/log4j.properties
@@ -10,6 +10,7 @@ log4j.appender.fichier.File=log/test.log
 
 
 log4j.logger.gd.examples=DEBUG, fichier
+log4j.logger.gd.hibernate=DEBUG, fichier
 
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 
