--- a/log4j.properties
+++ b/log4j.properties
@@ -9,8 +9,7 @@ log4j.appender.fichier.layout.ConversionPattern=%d %-5p %c - %F:%-4L - %m%n
 log4j.appender.fichier.File=log/test.log
 
 
-log4j.logger.gd.examples=DEBUG, fichier
-log4j.logger.gd.hibernate=DEBUG, fichier
+log4j.logger.gd=DEBUG, fichier
 
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 
